# brent-oil-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
config/: model_config.yaml
dashboard/: ReadMe.md  docker-compose.yml  run-dev.sh  setup.sh
dashboard/backend/: app.py  requirements.txt  run.py
dashboard/frontend/: Dockerfile  nginx.conf  package.json
dashboard/frontend/public/: index.html  manifest.json
dashboard/frontend/src/: App.css  App.js  index.css  index.js
data/processed/: historical_events.csv
docs/: analysis_workflow.md  assumptions_limitations.md  communication_channels.md
notebooks/: 01_data_exploration.ipynb  02_change_point_analysis.ipynb
results/tables/: impact_analysis.csv  model_summary.csv
src/: change_point_model.py  data_processing.py  exploratory_analysis.py  research_events.py  utils.py  visualization.py
