[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brent-oil-analysis"
version = "0.1.0"
authors = [
    {name = "Biniyam Mitiku", email = "binattamit@gmail.com"},
]
description = "Change point analysis of Brent oil prices"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Will be populated from requirements.txt
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "pre-commit>=3.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
