[metadata]
name = brent-oil-analysis
version = 0.1.0
author = Biniyam Mitiku
author_email = binattamit@gmail.com
description = Change point analysis of Brent oil prices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Avicci-b/brent-oil-analysis

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    # Will reference requirements.txt

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    venv,
    .venv

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
